fix(UI): Allow show the overflow/settings menu on the left

--- a/ui/less/overflow_menu.less
+++ b/ui/less/overflow_menu.less
@@ -41,6 +41,11 @@
   right: 15px;
   bottom: @material-icons-width + 14px;
 
+  &.left-position {
+    left: 15px;
+    right: initial;
+  }
+
   /* The buttons inside the menu. */
   button {
     font-size: @general-font-size;
